--- a/css/responsive.css
+++ b/css/responsive.css
@@ -65,6 +65,7 @@
     padding: 10px 60px;
     margin-top: 10px;
   }
+  
 }
 
 @media (max-width: 420px) {
@@ -76,9 +77,14 @@
     justify-content: flex-start;
     margin-bottom: 15px;
   }
+  .layout_padding-bottom {
+    padding: 0;}
 }
 
-@media (max-width: 376px) {}
+@media (max-width: 376px) {
+  .layout_padding-bottom {
+    padding: 0;}
+}
 
 @media (min-width: 1200px) {
   .container {
